# lab05.1

./: CMakeLists.txt  makefile
includes/: consumer.h  globals.h  message.h  message_queue.h  producer.h  queue.h  semaphore_utils.h
src/: consumer.c  main.c  message.c  message_queue.c  producer.c  queue.c  semaphore_utils.c
